[gd_scene load_steps=6 format=3 uid="uid://d10ywgcto66kl"]

[ext_resource type="Script" path="res://Main.gd" id="1_8kdw8"]
[ext_resource type="PackedScene" uid="uid://c1wweel51262r" path="res://Camera.tscn" id="2_t3e0o"]
[ext_resource type="PackedScene" uid="uid://m34p2hvudxok" path="res://HUD.tscn" id="3_3fj3k"]
[ext_resource type="Texture2D" uid="uid://b80y73vdy2tfc" path="res://assets/Stronghold_Terrain_Tileset.png" id="3_aylhi"]
[ext_resource type="PackedScene" uid="uid://bup6fufkddi7v" path="res://scenes/world/world1.tscn" id="3_1nrms"]
[ext_resource type="PackedScene" uid="uid://gjpgn3u26ki3" path="res://scenes/Chat.tscn" id="4_3ofkk"]
[ext_resource type="PackedScene" uid="uid://dusx2d14ehw6t" path="res://scenes/actions/Idle.tscn" id="5_yko50"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ymu3k"]
texture = ExtResource("3_aylhi")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0

[sub_resource type="TileSet" id="TileSet_ae20w"]
sources/0 = SubResource("TileSetAtlasSource_ymu3k")

[node name="Main" type="Node"]
script = ExtResource("1_8kdw8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.411765, 0.211765, 1)

[node name="Camera" parent="." instance=ExtResource("2_t3e0o")]
position = Vector2(581, 579)
zoom = Vector2(2, 2)

[node name="TileMap" parent="." instance=ExtResource("3_1nrms")]
layer_0/tile_data = PackedInt32Array(2555904, 0, 0, 2621440, 65536, 1, 2555905, 131072, 0, 2621441, 65536, 1, 2555906, 131072, 0, 2621442, 65536, 1, 2555907, 131072, 0, 2621443, 65536, 1, 2555908, 65536, 0, 2621444, 65536, 1, 2555909, 131072, 0, 2621445, 65536, 1, 2555910, 65536, 0, 2621446, 65536, 1, 2555911, 131072, 0, 2621447, 65536, 1, 2555912, 131072, 0, 2621448, 65536, 1, 2555913, 65536, 0, 2621449, 65536, 1, 2555914, 65536, 0, 2621450, 65536, 1, 2555915, 131072, 0, 2621451, 65536, 1, 2555916, 65536, 0, 2621452, 65536, 1, 2555917, 131072, 0, 2621453, 65536, 1, 2555918, 131072, 0, 2621454, 65536, 1, 2555919, 131072, 0, 2621455, 65536, 1, 2555920, 131072, 0, 2621456, 65536, 1, 2555921, 131072, 0, 2621457, 65536, 1, 2555922, 131072, 0, 2621458, 65536, 1, 2555923, 131072, 0, 2621459, 65536, 1, 2555924, 131072, 0, 2621460, 65536, 1, 2555925, 131072, 0, 2621461, 65536, 1, 2555926, 131072, 0, 2621462, 65536, 1, 2555927, 65536, 0, 2621463, 65536, 1, 2555928, 131072, 0, 2621464, 65536, 1, 2555929, 131072, 0, 2621465, 65536, 1, 2555930, 65536, 0, 2621466, 65536, 1, 2555931, 131072, 0, 2621467, 65536, 1, 2555932, 131072, 0, 2621468, 65536, 1, 2555933, 65536, 0, 2621469, 65536, 1, 2555934, 131072, 0, 2621470, 65536, 1, 2555935, 131072, 0, 2621471, 65536, 1, 2555936, 131072, 0, 2621472, 65536, 1, 2555937, 131072, 0, 2621473, 65536, 1, 2555938, 65536, 0, 2621474, 65536, 1, 2555939, 131072, 0, 2621475, 65536, 1, 2555940, 131072, 0, 2621476, 65536, 1, 2555941, 131072, 0, 2621477, 65536, 1, 2555942, 65536, 0, 2621478, 65536, 1, 2555943, 131072, 0, 2621479, 65536, 1, 2555944, 131072, 0, 2621480, 65536, 1, 2555945, 131072, 0, 2621481, 65536, 1, 2555946, 131072, 0, 2621482, 65536, 1, 2555947, 131072, 0, 2621483, 65536, 1, 2555948, 131072, 0, 2621484, 65536, 1, 2555949, 65536, 0, 2621485, 65536, 1, 2555950, 131072, 0, 2621486, 65536, 1, 2555951, 131072, 0, 2621487, 65536, 1, 2555952, 131072, 0, 2621488, 65536, 1, 2555953, 131072, 0, 2621489, 65536, 1, 2555954, 131072, 0, 2621490, 65536, 1, 2555955, 65536, 0, 2621491, 65536, 1, 2555956, 131072, 0, 2621492, 65536, 1, 2555957, 131072, 0, 2621493, 65536, 1, 2555958, 65536, 0, 2621494, 65536, 1, 2555959, 131072, 0, 2621495, 65536, 1, 2555960, 131072, 0, 2621496, 65536, 1, 2555961, 131072, 0, 2621497, 65536, 1, 2555962, 131072, 0, 2621498, 65536, 1, 2555963, 65536, 0, 2621499, 65536, 1, 2555964, 131072, 0, 2621500, 65536, 1, 2555965, 131072, 0, 2621501, 65536, 1, 2555966, 131072, 0, 2621502, 65536, 1, 2555967, 131072, 0, 2621503, 65536, 1, 2555968, 131072, 0, 2621504, 65536, 1, 2555969, 131072, 0, 2621505, 65536, 1, 2555970, 131072, 0, 2621506, 65536, 1, 2555971, 131072, 0, 2621507, 65536, 1, 2555972, 65536, 0, 2621508, 65536, 1, 2555973, 131072, 0, 2621509, 65536, 1, 2555974, 131072, 0, 2621510, 65536, 1, 2555975, 196608, 0, 2621511, 65536, 1, 2490377, 458752, 0, 2490378, 589824, 2, 2490379, 589824, 2, 2490380, 655360, 2, 2490381, 589824, 2, 2490382, 589824, 2, 2490383, 524288, 0, 2424846, 524288, 0, 2359309, 524288, 0, 2424842, 458752, 0, 2359307, 458752, 0, 2359308, 589824, 3, 2424844, 524288, 2, 2424843, 524288, 2, 2424845, 524288, 2, 2293777, 65536, 4, 2293778, 65536, 4, 2293779, 65536, 4, 2293780, 65536, 4, 2293781, 65536, 4, 2293776, 0, 4, 2293782, 131072, 4, 2031634, 786432, 4, 2097170, 786432, 5, 2162706, 786432, 5, 2228242, 786432, 6, 2490439, 0, 2, 2424903, 0, 2, 2359367, 0, 2, 2293831, 0, 2, 2228295, 0, 2, 2162759, 0, 2, 2097223, 0, 2, 2031687, 0, 2, 1966151, 0, 2, 1900615, 0, 2, 1638471, 0, 2, 1704007, 0, 2, 1769543, 0, 2, 1835079, 0, 2, 1572935, 0, 2, 1507399, 0, 2, 1441863, 0, 2, 1376327, 0, 2, 1310791, 0, 2, 1245255, 0, 2, 1179719, 0, 2, 1114183, 0, 2, 1048647, 0, 2)

[node name="Chat" parent="." instance=ExtResource("4_3ofkk")]
position = Vector2(578, 404)

[node name="Idle" parent="Chat" instance=ExtResource("5_yko50")]
[node name="HUD" parent="Camera" instance=ExtResource("3_3fj3k")]


[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DayTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="start_game" from="Camera/HUD" to="." method="new_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
